# BYRDocsWikiGraphs

./: .gitignore  clean.py  makefile  preset.sty  task.sh
.github/workflows/: upload-new-graph.yml
archive/: 22-23-2-大学物理C-期中-第2题图.tex  22-23-2-大学物理C-期中-第3题图.tex  22-23-2-大学物理C-期中-第4题图.tex  22-23-2-大学物理E（上）-期末-选项1.10-A.tex  22-23-2-大学物理E（上）-期末-选项1.10-B.tex  22-23-2-大学物理E（上）-期末-选项1.10-C.tex  22-23-2-大学物理E（上）-期末-选项1.10-D.tex  22-23-2-大学物理E（上）-期末-选项1.10.tex  22-23-2-大学物理E（上）-期末-选项1.5-A.tex  22-23-2-大学物理E（上）-期末-选项1.5-B.tex  22-23-2-大学物理E（上）-期末-选项1.5-C.tex  22-23-2-大学物理E（上）-期末-选项1.5-D.tex  22-23-2-大学物理E（上）-期末-选项1.5.tex  22-23-2-大学物理E（上）-期末-题图1.2.tex  22-23-2-大学物理E（上）-期末-题图1.3.tex  22-23-2-大学物理E（上）-期末-题图3.1.tex  22-23-2-大学物理E（上）-期末-题图3.2.tex  22-23-2-大学物理E（上）-期末-题图3.3.tex  22-23-2-大学物理E（上）-期末-题图3.4.tex  23-24-1-信号与系统-期中-解答-6a.tex  23-24-1-信号与系统-期中-解答3-1.tex  23-24-1-信号与系统-期中-解答3.2.tex  23-24-1-信号与系统-期中-解答4.2.tex  23-24-1-信号与系统-期中-解答6b.tex  23-24-1-信号与系统-期中-题图2-3.tex  23-24-1-信号与系统-期中-题图2-6.tex  23-24-1-信号与系统-期中-题图4.tex  23-24-1-信号与系统-期中-题图7.tex  23-24-1-信号与系统-期中-题图8a.tex  23-24-1-信号与系统-期中-题图8b.tex  23-24-1-信号与系统-题图2-9.tex  23-24-1-信号与系统-题图4.tex  23-24-1-信号与系统-题图5.tex  23-24-1-大学物理（下）-期末-题图1.5.tex  23-24-1-大学物理（下）-期末-题图2.tex  23-24-1-大学物理（下）-期末-题图3.tex  23-24-1-微波工程基础-期末-解答7-1.typ  23-24-1-微波工程基础-期末-解答7-2.typ  23-24-2-数字信号处理-期末-题图3.2.tex  23-24-2-电磁场与微波-期中-题图4.tex  (+147 more)
uploader/: CMakeLists.txt
uploader/include/: wiki.hpp
uploader/lib/: libwiki.cpp
uploader/src/: upload.cpp
uploader/test/: csrf.cpp  login.cpp  token.cpp  upload_existing.cpp
