cmake_minimum_required(VERSION 3.22)
project(byrdocs_wikigraph_uploader VERSION 0.1)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
enable_testing()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE HeaderFileList "include/*")
file(GLOB_RECURSE LibraryFileList "lib/*")
include_directories(include /usr/include /usr/local/include)
link_directories(lib /usr/lib /usr/local/lib)
add_library(wiki ${HeaderFileList} ${LibraryFileList})
find_package(curlpp NAMES curlpp curl)
find_package(nlohmann_json 3.11.3 REQUIRED)
target_link_libraries(wiki PUBLIC nlohmann_json::nlohmann_json curlpp curl)
add_executable(.token test/token.cpp)
target_link_libraries(.token wiki)
add_test(NAME token COMMAND .token)
add_executable(.login test/login.cpp)
target_link_libraries(.login wiki)
add_test(NAME login COMMAND .login)
add_executable(.csrf test/csrf.cpp)
target_link_libraries(.csrf wiki)
add_test(NAME csrf COMMAND .csrf)
add_executable(.upload_existing test/upload_existing.cpp)
target_link_libraries(.upload_existing wiki)
add_test(NAME upload_existing COMMAND .upload_existing)
